intro numpy & pandas

--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7b1a7da5-9b82-4684-93c1-f7a399b31092",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4cbb7fe0-0a73-4cbc-b09e-046e490cb5dc",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "4            12.488369  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,8 +170,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f221cc2c-57eb-4882-9c5e-fea1ca1780dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "engine_displacement      0\n",
+       "num_cylinders          482\n",
+       "horsepower             708\n",
+       "vehicle_weight           0\n",
+       "acceleration           930\n",
+       "model_year               0\n",
+       "origin                   0\n",
+       "fuel_type                0\n",
+       "drivetrain               0\n",
+       "num_doors              502\n",
+       "fuel_efficiency_mpg      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#missing values\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e6d4ef3-6dc3-4670-8bca-f277fbc121f9",
    "metadata": {},
    "outputs": [],
    "source": []
