--- a/02-regression/price_prediction.ipynb
+++ b/02-regression/price_prediction.ipynb
@@ -1696,26 +1696,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "id": "7ab72f8d-9dd7-467c-ba8a-a085afc4f6aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "##2.5 Linear regression"
+    "## Linear regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "761c0cb0-8aac-4356-adfe-722a3b56300b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "make                                 rolls-royce\n",
+       "model                     phantom_drophead_coupe\n",
+       "year                                        2015\n",
+       "engine_fuel_type     premium_unleaded_(required)\n",
+       "engine_hp                                  453.0\n",
+       "engine_cylinders                            12.0\n",
+       "transmission_type                      automatic\n",
+       "driven_wheels                   rear_wheel_drive\n",
+       "number_of_doors                              2.0\n",
+       "market_category        exotic,luxury,performance\n",
+       "vehicle_size                               large\n",
+       "vehicle_style                        convertible\n",
+       "highway_mpg                                   19\n",
+       "city_mpg                                      11\n",
+       "popularity                                    86\n",
+       "Name: 10, dtype: object"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.iloc[10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "ae628f0a-4a91-4920-bc93-cd5948681656",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xi = [453, 11, 86]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "c3e2fad3-3fdf-4bf9-8a72-988d70209a5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w0 = 7.17\n",
+    "w = [0.01,0.04,0.002] \n",
+    "xi = [453, 11, 86]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "f9d25371-3569-46fd-8cb9-e76b6ac1851f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_regression(xi):\n",
+    "    n = len(xi)\n",
+    "\n",
+    "    pred = w0\n",
+    "\n",
+    "    for j in range(n):\n",
+    "        pred = pred + w[j] * xi[j]\n",
+    "\n",
+    "    return pred \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "5a8c825b-9c2e-4c8a-85a7-c3e9a78cb1ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.312"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linear_regression(xi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "5b809985-39ac-4d7a-90ae-3fd21a0a3a62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(222348.2221101062)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(12.312)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "761c0cb0-8aac-4356-adfe-722a3b56300b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae628f0a-4a91-4920-bc93-cd5948681656",
+   "id": "5603df83-2aea-4e51-aaca-c552085e401e",
    "metadata": {},
    "outputs": [],
    "source": []
